samples/_failures_safe/1761409547_d709da_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d43f945.c: In function ‘main’:
./samples/SAFE/__tmp_5d43f945.c:156:12: error: missing terminating " character
  156 |     printf("
      |            ^
./samples/SAFE/__tmp_5d43f945.c:156:5: error: expected expression at end of input
  156 |     printf("
      |     ^~~~~~
./samples/SAFE/__tmp_5d43f945.c:156:5: error: expected declaration or statement at end of input
